--- a/backbone-spa-ui/js/tube-app/index.html
+++ b/backbone-spa-ui/js/tube-app/index.html
@@ -1,6 +1,10 @@
 <html>
+
 <head></head>
-    <body>
-        <h1>Hello world</h1>
-    </body>
+
+<body>
+    <h1>Hello world</h1>
+    <img src="/static/Untitled.jpg">
+</body>
+
 </html>
