New bundles way. Docs

--- a/backbone-spa-ui/js/tube-app/index.html
+++ b/backbone-spa-ui/js/tube-app/index.html
@@ -6,5 +6,5 @@
     <h1>Hello world</h1>
     <img src="/static/Untitled.jpg">
 </body>
-<script type="application/javascript" src="/bundles/tube.bundle.js"></script>
+<script type="application/javascript" src="/static/bundles/tube.bundle.js"></script>
 </html>
