--- a/backbone-spa-ui/app/tube-app/index.html
+++ b/backbone-spa-ui/app/tube-app/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="utf-8">
     <title>Backbone-spa</title>
+    <base href="/">
+
+    <!-- Temporary solution: include file -->
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/main-page-style.css" rel="stylesheet">
+    <link href="/static/css/res.css" rel="stylesheet">
 </head>
 <body>
     <div id="app-view"></div>
 </body>
-<script type="application/javascript" src="/build/scripts/tube.bundle.js"></script>
+<script type="application/javascript" src="/build/tube.bundle.js"></script>
 </html>
