CSS channel. Remove files

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="search">
                 <div id="head-search" class="search-form consolidated-form">
                     <div id="head-search-terms" class="head-search-terms-border ">
-                        <input id="head-search-term" autocomplete="off" class="search-term" value="" type="text" placeholder="" title="Search" >
+                        <input id="head-search-term" autocomplete="off" class="search-term" value="" type="text" placeholder="" title="Search">
                     </div>
                 </div>
             </div>
@@ -51,6 +51,19 @@
                     </ul>
 
                     <div class="line"></div>
+
+                    <div class="title-menu">Subscriptions</div>
+                    <ul class="channel-menu nav">
+                        <li class="active"><a class="channel" href="#">Главная</a></li>
+                        <li><a class="channel" href="#">Мой канал</a></li>
+                        <li><a class="channel" href="#">Набирающие популярность</a></li>
+                        <li><a class="channel" href="#">Подписки</a></li>
+                        <li><a class="channel" href="#">Просмотренные</a></li>
+                        <li><a class="channel" href="#">Посмотреть позже</a></li>
+                    </ul>
+
+                    <div class="line"></div>
+                    
                 </div>
             </div>
             <div class="">
@@ -140,4 +153,5 @@
     <script src="/static/js/main.js"></script>
 </body>
 <script type="application/javascript" src="/bundles/tube.bundle.js"></script>
+
 </html>
