Destroy and load sidebar on click. (Loading channels and mainmenu modules)

--- a/backbone-spa-ui/app/tube-app/index.html
+++ b/backbone-spa-ui/app/tube-app/index.html
@@ -9,9 +9,11 @@
     <!-- Temporary solution: include file -->
     <link rel="stylesheet" href="/static/css/main-page-style.css">
     <link rel="stylesheet" href="/static/css/res.css">
+    
 </head>
 <body>
     <div id="app-view"></div>
     <script type="application/javascript" src="/build/scripts/tube.bundle.js"></script>
+    <script type="application/javascript" src="/build/scripts/layout.bundle.js"></script>
 </body>
 </html>
